Added footer,scroll up button and obe image

--- a/obepage.html
+++ b/obepage.html
@@ -69,6 +69,14 @@
         word-spacing:1.3px;
     }
 
+    .footer-top{
+    /*background: #fff;*/
+    padding: 0 0 30px 0;
+    color: #444444;
+    font-size: 14px;
+    
+}
+
     </style>
 
 </head>
@@ -116,7 +124,7 @@
 
             <div class="row">
                 <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
-                    <img src="assets/img/Collaboration.png" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 30px;">
+                    <img src="assets/img/photo-1.jpeg" class="img-fluid" alt="" style="height: 400px; width: 400px; border-radius: 10px;">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
                     <h3>Crowdsourced for free by a growing team of students for your convenience!</h3>
@@ -289,7 +297,50 @@
     <!-- End Services Section -->
 
     <!-- =======lower footer ======= -->
-    <footer id="footer">
+    <footer id="footer" >
+
+    <div class="footer-top section-bg" style="background-color: #f1f6fe">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3>Contact Details</h3>
+                        <p>
+                            <a href="https://www.linkedin.com/in/divjas/" target="_blank" style="color: black;">Divjas Singh</a><br> Founder <br><br>
+                            <strong>Phone:</strong> +91 80768 89032<br>
+                            <strong>Email:</strong> divjassarna@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3><br></h3>
+                        <p>
+                            <a href="https://www.linkedin.com/in/satwik-dudeja-374896192/" target="_blank" style="color: black;">Satwik Dudeja</a> <br> Co-Founder <br><br>
+                            <strong>Phone:</strong> +91 96500 86966<br>
+                            <strong>Email:</strong> satwikdudeja@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3><br></h3>
+                        <p>
+                            <a href="https://www.linkedin.com/in/praneet-sawhney/" target="_blank" style="color: black;">Praneet Sawhney</a> <br> Vice-President <br><br>
+                            <strong>Phone:</strong> +91 76786 54450<br>
+                            <strong>Email:</strong> sawhneypraneet@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Social Networks</h4>
+                        <div class="social-links mt-3">
+                            <a href="https://www.linkedin.com/company/mindssocial/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://www.instagram.com/minds.social/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     <div class="container py-2">
             <div class="copyright">
                 &copy; Copyright <strong><span>MINDS</span></strong>. All Rights Reserved
@@ -300,6 +351,10 @@
         </div>
     </footer>
     <!-- =======lower footer ends ======= -->
+
+<div id="preloader"></div>
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    
 
 
 <!-- Vendor JS Files -->
