--- a/index.html
+++ b/index.html
@@ -160,6 +160,18 @@
 
             </div>
 
+            <div class="row1">
+                <div class="column1" data-aos="fade-up" data-aos-delay="100">
+                    <img src="assets/img/portfolio/Q5.PNG" style="padding-bottom: 30px; padding-top: 30px;">
+                    <img src="assets/img/portfolio/Q3.PNG">
+                </div>
+                <div class="column1" data-aos="fade-up" data-aos-delay="200">
+                    <img src="assets/img/portfolio/Q2.PNG" style="padding-bottom: 30px; padding-top: 30px;">
+                    <img src="assets/img/portfolio/Q4.PNG" style="padding-bottom: 30px; padding-top: 20px;">
+                </div>
+                <img src="assets/img/portfolio/Q6.PNG" style="width: 55%; display: block; margin-left: auto; margin-right: auto; padding-top: 30px;">
+            </div>
+
         </div>
     </section>
     <!-- End Perks Section -->
