--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <img src="assets/img/portfolio/Q2.PNG" style="padding-bottom: 30px; padding-top: 30px;">
                     <img src="assets/img/portfolio/Q4.PNG" style="padding-bottom: 30px; padding-top: 20px;">
                 </div>
-                <img src="assets/img/portfolio/Q6.PNG" style="width: 55%; display: block; margin-left: auto; margin-right: auto; padding-top: 30px;">
+                <!-- <img src="assets/img/portfolio/Q6.PNG" style="width: 55%; display: block; margin-left: auto; margin-right: auto; padding-top: 30px;"> -->
             </div>
 
         </div>
