--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
             <div class="contact-info mr-auto">
-                <i class="icofont-envelope"></i> <a href="mailto:networkingwithminds@gmail.com">networkingwithminds@gmail.com</a>
+                <i class="icofont-envelope"></i> <a href="mailto:connect@mindssocial.org">connect@mindssocial.org</a>
                 <i class="icofont-phone"></i> +91 80768 89032
             </div>
             <div class="social-links">
@@ -418,7 +418,7 @@
                     <div class="info-box  mb-4">
                         <i class="bx bx-envelope"></i>
                         <!-- <h3>Email Us</h3> -->
-                        <p><a href="mailto:networkingwithminds@gmail.com" target="_blank" style="color: black;">networkingwithminds@gmail.com</a></p>
+                        <p><a href="mailto:connect@mindssocial.org" target="_blank" style="color: black;">connect@mindssocial.org</a></p>
                     </div>
                 </div>
 
@@ -475,7 +475,7 @@
                         <p>
                             <a href="https://www.linkedin.com/in/divjas/" target="_blank" style="color: black;">Divjas Singh</a><br> Founder <br><br>
                             <strong>Phone:</strong> +91 80768 89032<br>
-                            <strong>Email:</strong> divjassarna@gmail.com<br>
+                            <strong>Email:</strong><a href="mailto:divjassarna@gmail.com" target="_blank" style="color: black;"> divjassarna@gmail.com</a><br>
                         </p>
                     </div>
 
@@ -484,7 +484,7 @@
                         <p>
                             <a href="https://www.linkedin.com/in/satwik-dudeja-374896192/" target="_blank" style="color: black;">Satwik Dudeja</a> <br> Co-Founder <br><br>
                             <strong>Phone:</strong> +91 96500 86966<br>
-                            <strong>Email:</strong> satwikdudeja@gmail.com<br>
+                            <strong>Email:</strong><a href="mailto:satwikdudeja@gmail.com" target="_blank" style="color: black;"> satwikdudeja@gmail.com</a><br>
                         </p>
                     </div>
 
@@ -493,7 +493,7 @@
                         <p>
                             <a href="https://www.linkedin.com/in/praneet-sawhney/" target="_blank" style="color: black;">Praneet Sawhney</a> <br> Vice-President <br><br>
                             <strong>Phone:</strong> +91 76786 54450<br>
-                            <strong>Email:</strong> sawhneypraneet@gmail.com<br>
+                            <strong>Email:</strong><a href="mailto:sawhneypraneet@gmail.com" target="_blank" style="color: black;"> sawhneypraneet@gmail.com</a><br>
                         </p>
                     </div>
 
