--- a/index.html
+++ b/index.html
@@ -164,12 +164,14 @@
                 <div class="column1" data-aos="fade-up" data-aos-delay="100">
                     <img src="assets/img/portfolio/Q5.PNG" style="padding-bottom: 30px; padding-top: 30px;">
                     <img src="assets/img/portfolio/Q3.PNG">
+                    <img src="assets/img/portfolio/Q1.PNG">
                 </div>
                 <div class="column1" data-aos="fade-up" data-aos-delay="200">
                     <img src="assets/img/portfolio/Q2.PNG" style="padding-bottom: 30px; padding-top: 30px;">
-                    <img src="assets/img/portfolio/Q4.PNG" style="padding-bottom: 30px; padding-top: 20px;">
+                    <img src="assets/img/portfolio/Q4.PNG" style="padding-bottom: 90px; padding-top: 20px;">
+                    <img src="assets/img/portfolio/Q6.PNG">
                 </div>
-                <img src="assets/img/portfolio/Q6.PNG" style="width: 55%; display: block; margin-left: auto; margin-right: auto; padding-top: 30px;">
+                <!-- <img src="assets/img/portfolio/Q6.PNG" style="width: 55%; display: block; margin-left: auto; margin-right: auto; padding-top: 30px;"> -->
             </div>
 
         </div>
