--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                 </div>
 
             </div>
+            <br><br>
+            <p style="text-align: center; font-weight: 1000; font-size: larger;">We conducted a primary research spanning over a month, aimed to gauge the need of guidance and mentorship within the student community. The responses thus obtained evince the unfulfilled need for a mentor.</p>
 
             <div class="row1">
                 <div class="column1" data-aos="fade-up" data-aos-delay="100">
