--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-group"></i></div>
-                        <h4><a href="http://bit.ly/MINDSVolunteer" target="_blank">Volunteers</a></h4>
-                        <p>Get ample opportunity to learn, grow and progress and enable both personal and organization's growth.</p>
+                        <h4><a href="http://bit.ly/MINDSBH20" target="_blank">Branch Heads</a></h4>
+                        <p>Get ample opportunities to learn, grow and network, enabling both personal and organization's growth.</p>
                     </div>
                 </div>
             </div>
