--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>M.I.N.D.S.</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <meta content="MINDS, Mentoring Initiative for Networking and Development of Students, mentor, mentee, student, community, network" name="description">
+    <meta content="MINDS, Mentoring Initiative for Networking and Development of Students, mentor, mentee, student, community, network" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/Blue Logo.png" rel="icon">
