--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>M.I.N.D.S.</title>
-    <meta content="MINDS, Mentoring Initiative for Networking and Development of Students, mentor, mentee, student, community, network" name="description">
-    <meta content="MINDS, Mentoring Initiative for Networking and Development of Students, mentor, mentee, student, community, network" name="keywords">
+    <title>Mentoring Initiative for Networking and Development of Students</title>
+    <meta content="M.I.N.D.S., a not for profit social endeavor, has been created with the thought of giving back to the student community. It is an attempt to create a social impact network that works on the grounds of mutual benefits." name="description">
+    <meta content="MINDS, Mentoring Initiative for Networking and Development of Students, mentor, mentee, student, community, network, mindssocial, M.I.N.D.S., minds, MINDS, social" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/Blue Logo.png" rel="icon">
