--- a/index.html
+++ b/index.html
@@ -484,6 +484,20 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
 
+        <div class="footer-newsletter" style="background-color: white;">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h4>Join Our Newsletter</h4>
+                        <p>Subscribe to our newsletter for latest updates about our mentors!</p>
+                        <form id="newsletter" method="post" data-netlify="true">
+                            <input type="email" name="email"><input type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="footer-top section-bg">
             <div class="container">
                 <div class="row">
