--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h4>Join Our Newsletter</h4>
-                        <p>Subscribe to our newsletter for latest updates about our mentors!</p>
+                        <h4>Subscribe to our Newsletter</h4>
+                        <p>Join our mailing list for all updates from the network!</p>
                         <form id="newsletter" method="post" data-netlify="true">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
+                            <input type="email" name="email" placeholder="Your Email"><input type="submit" value="Subscribe">
                         </form>
                     </div>
                 </div>
